Bug 548416 - [13] [test] Fix test failures in Java 13 - first set in SwitchExpressionTest
Change-Id: I2fbbd90b7010ba4758f0ade965da4cd06a3dd691